# barakah_foundation

./: .gitignore  README.md
backend/: .env  .env.example  Cargo.toml
backend/src/: auth.rs  errors.rs  main.rs  models.rs
backend/src/handlers/: accounts.rs  auth_handler.rs  beneficiaries.rs  dashboard.rs  donations.rs  meetings.rs  members.rs  mod.rs  projects.rs
frontend/: barakah_foundation(3).sql  barakah_foundation.sql  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.js  components.jsx
frontend/src/pages/: Accounts.jsx  Dashboard.jsx  Login.jsx  Members.jsx  Modules.jsx  Users.jsx
