[package]
name    = "bmf-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bmf-backend"
path = "src/main.rs"

[dependencies]
actix-web     = "4"
actix-cors    = "0.7"
actix-web-httpauth = "0.8"
sqlx          = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
tokio         = { version = "1",   features = ["full"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
chrono        = { version = "0.4", features = ["serde"] }
rust_decimal  = { version = "1",   features = ["serde-float"] }
dotenvy       = "0.15"
env_logger    = "0.11"
log           = "0.4"
# JWT
jsonwebtoken  = "9"
# Password hashing
bcrypt        = "0.15"
# UUID
uuid          = { version = "1", features = ["v4"] }
